# carma-platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: __init__.py  config.py  database.py  main.py
app/ai/: __init__.py  advisor.py  prompts.py
app/api/: dashboard.py  payments.py  whatsapp.py
app/models/: __init__.py  conversation.py  event.py  knowledge.py  order.py  vehicle.py
app/pdf/: __init__.py  compiler.py  scoring.py
app/pdf/templates/: report.html
app/rpa/: __init__.py  base.py  captcha.py  orchestrator.py  registry.py
app/rpa/portals/: __init__.py  _demo.py  apeseg.py  mtc_citv.py  pnp.py  sat_lima.py  sbs.py  sunarp.py  sutran.py
app/schemas/: __init__.py  chat.py  knowledge.py  report.py
app/services/: __init__.py  payment.py  report.py  whatsapp_client.py
app/tasks/: __init__.py  celery_app.py  jobs.py
deploy/: README.md  bootstrap_vps.sh
scripts/: init_db.py
tests/: test_advisor_limit.py  test_rpa_orchestrator.py  test_scoring.py
